/*
Copyright 2021 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = ".;pb";

message MountAzureBlobRequest {
    string targetPath = 1;
	string accountName = 2;
	string containerName = 3;
	string accountKey = 4;
	string tmpPath = 5;
}

message MountAzureBlobResponse {
	string err = 1;
}

service MountService {
	rpc MountAzureBlob(MountAzureBlobRequest) returns (MountAzureBlobResponse) {};
}
